--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.hibernate.ddl-auto=create
 spring.graphql.graphiql.enabled=true
 server.port=8090
+spring.graphql.websocket.path=/graphql
